@@ -9,6 +9,9 @@
   the Group filter.
 - Implemented feature request #10997: Added support for OpenID check_immediate
   mode.
+- Implemented feature request #11006: Added the isValid() method in the
+  ezcAuthenticationSession class which can be used to avoid creating the
+  authentication filters if the credentials are already stored in the session.
 
 
 1.0 - Monday 02 July 2007
